--- a/index.html
+++ b/index.html
@@ -6,20 +6,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Majestic Villa
         </title>
-        <link href="CSS/navbar.css" rel="stylesheet">
         <link href="CSS/home.css" rel="stylesheet">
         <link href="CSS/style.css" rel="stylesheet">
-    
-
+        <link href="CSS/footer.css" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
         <script src="javascript/darkmode.js" defer></script>
         <script src="javascript/loadNavbar.js" defer></script>
+        <script src="javascript/footer.js" defer></script>
 
     </head>
     <body>
-        <div id="navbar"></div>
+        <div id="navbar" role="navigation" aria-label="Main Navigation"></div>
 
-        <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+        <div id="myCarousel" class="carousel slide" data-bs-ride="carousel" aria-label="Hero image carousel">
 
             <!-- Indicators -->
             <div class="carousel-indicators">
@@ -54,7 +53,7 @@
 
         <section class="welcome-section">
             <div class="container">
-                <h1 class="text-center mb-4">Welcome to Majectic Villa</h1>
+                <h1 class="text-center">Welcome to Majectic Villa</h1>
 
                 <p>
                     Nestled along the  Mediterranean shoreline, Majestic Villa offers an exclusive retreat for those who seek the extraordinary. 
@@ -121,7 +120,7 @@
         <section>
             <div class=" container latest-activity">
                 <!--Add the trip planner-->
-                <h1 class="text-center mb-3"> Plan Your Perfect Stay </h1>
+                <h1 class="text-center"> Plan Your Perfect Stay </h1>
                 <p>
                     Begin planning the details of your luxury vacation.  Research shows that 
                     guests who plan their activities in advance report 40% higher satisfaction  
@@ -132,6 +131,9 @@
             </div>
 
         </section>
+
+
+        <div id="footer-placeholder"></div>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     </body>
