--- a/navbar.html
+++ b/navbar.html
@@ -1,4 +1,22 @@
-<nav class="nav-bar navbar navbar-expand-lg sticky-top navbar-light "
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Majestic Villa
+        </title>
+        <link href="CSS/navbar.css" rel="stylesheet">
+        <link href="CSS/style.css" rel="stylesheet">
+    
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+        <script src="javascript/darkmode.js" defer></script>
+        <script src="javascript/loadNavbar.js" defer></script>
+
+    </head>
+
+    <body>
+
+        <nav class="nav-bar navbar navbar-expand-lg sticky-top navbar-light "
         role="navigation"
         aria-label="Main Navigation">
 
@@ -60,3 +78,9 @@
 
         </div>
     </nav>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    </body>
+    
+</html>
+
